dessa forma sem csrf ativa o logout